2011-07-13  Rob Lauer  <rlauer@signatureinfo.com>

	* src/main/perl/lib/BLM/Benchmark.pm: SYNOPSIS
	* src/main/perl/lib/Bedrock/Text/TagX/TAG/NoBody/Case.pm: <case:*foo>
	* src/main/perl/lib/Bedrock/Apache/Request_shell.pm
	- don't override default options unless values present in .bedrock_rc
	[rename BLM/PLUGIN.pm, BLM/AppPLUGIN.pm, plugin munging]
	* src/main/perl/lib/Bedrock/Apache/Bedrock.pm
	(config): collect config files processed, process .d/plugin dir also
	(handler): better error message when config files cause exception
	* src/main/perl/lib/Bedrock/Plugin.pm
	- renamed from BLM/PLUGIN.pm
	- don't create hash from args
	- store args to class
	- pod
	(args): new
	* src/main/perl/lib/Bedrock/Application/Plugin.pm: renamed from BLM/AppPLUGIN.pm
	* src/main/perl/lib/Bedrock/Text/TagX/TAG/NoBody/Plugin.pm: support for above changes
	* src/main/perl/lib/Makefile.am: support of above changes

2011-07-12  Rob Lauer  <rlauer@signatureinfo.com>

	* configure.ac: bump version for dev cycle
	* NEWS: likewise

	RELEASED: bedrock 2.1.1

	* configure.ac: bump version for release
	* NEWS: update release date
	* src/main/perl/lib/*.pm: VERSION
	* src/main/perl/lib/Bedrock/BedrockCGI.pm
	- renamed from CGI.pm due to name collision
	- pod
	(new): set content-type from options or default
	(session): accept array ref as argument
	(clear): new
	(cgi): new
	(redirect): new
	(DESTROY): don't output headers if no data
	* src/main/perl/lib/Makefile.am: renamed Bedrock/CGI.pm
	* src/main/perl/lib/Bedrock/Apache/Bedrock.pm: output $@ on error

2011-07-11  Rob Lauer  <rlauer@signatureinfo.com>
	* src/main/perl/lib/Bedrock/CGI.pm: new
	* src/main/perl/lib/Makefile.am: add Bedrock/CGI.pm
	* src/main/perl/lib/Bedrock/Apache/Bedrock.pm
	- $r && $r->log
	(config)
	- ".d"
	- undef, split /\//, $dir
	* bedrock.spec.in
	(%install)
	- %{_libdir}/config.d
	(%description): website address
	* src/main/bedrock/config/Makefile.am: renamed perl-bedrock.conf.in to perl_bedrock.conf.in
