@@ -98,7 +98,7 @@ sub STORE
     while ( @_ ) {
 	my $header = ucfirst(shift);
 	my $value = shift;
-	if ( exists $output->{$header} ) {
+	if ( exists $output->{$header} && $header !~ m/location:/i ) {
 	    $output->{$header} = [ $output->{$header} ] unless ref( $output->{$header} );
 	    push @{$output->{$header}}, $value;
 	} else {
@@ -284,6 +284,9 @@ Rob Lauer - rlauer@signatureinfo.com
 #
 # Name of Release: $Name$
 # $Log$
+# Revision 1.18  2011/07/15 15:30:25  laytonax
+# Minor changes to Startup/Header.pm and Bedrock/Context.pm, both of which were exposed when the application stack has multiple Cookie: headers (as is the case when sitting behind an application pool such as an F5 or Varnish).
+#
 # Revision 1.17  2011/07/12 19:10:35  eutl420
 # set VERSION from cvs Revision keyword
 #
