@@ -331,25 +331,31 @@ sub getCookieValue
 {
     my $self = shift;
     return unless exists $ENV{'HTTP_COOKIE'};
+
+    my $raw_cookie = $ENV{'HTTP_COOKIE'};
+
     unless ( exists $self->{'__cookies__'} ) {
-	$self->{'__cookies__'} = {};
-	for my $cookie (split(';', $ENV{'HTTP_COOKIE'} )) {
-	    $cookie =~ s/^\s*(.*?)\s*$/$1/;
-	    my ($key, $value) = split ('=', $cookie);
-	    $self->{'__cookies__'}->{$key} = &Text::URLEncode::Decode($value);
-	}
+
+        $self->{'__cookies__'} = {};
+
+        for my $cookie (split("[;,] ?", $raw_cookie )) {
+            $cookie =~ s/^\s*(.*?)\s*$/$1/;
+            my ($key, $value) = split ('=', $cookie);
+            $self->{'__cookies__'}->{$key} = &Text::URLEncode::Decode($value);
+        }
     }
 
     if ( @_ == 1 ) {
-	$self->{'__cookies__'}->{$_[0]};
+        $self->{'__cookies__'}->{$_[0]};
     } elsif ( @_ > 1 ) {
-	my @values;
-	for (@_) {
-	    push @values, $self->{'__cookies__'}->{$_};
-	}
-	@values;
+        my @values;
+        for (@_) {
+            push @values, $self->{'__cookies__'}->{$_};
+        }
+
+        @values;
     } else {
-	sort keys %{$self->{'__cookies__'}};
+        sort keys %{$self->{'__cookies__'}};
     }
 }
 
@@ -368,6 +374,9 @@ sub input
 #
 # Name of Release: $Name$
 # $Log$
+# Revision 1.18  2011/07/15 15:30:25  laytonax
+# Minor changes to Startup/Header.pm and Bedrock/Context.pm, both of which were exposed when the application stack has multiple Cookie: headers (as is the case when sitting behind an application pool such as an F5 or Varnish).
+#
 # Revision 1.17  2011/07/04 13:40:07  eutl420
 # - add content-type to the stat object returned in the upload_file call
 #
