@@ -1,3 +1,8 @@
+2011-07-15  Andy Layton  <alayton@signatureinfo.com>
+
+	* src/main/perl/lib/BLM/Startup/Header.pm: Add check for duplication location: header
+	* src/main/perl/lib/Bedrock/Context.pm: Include ',' delimiter for cookie parsing
+
 2011-07-13  Rob Lauer  <rlauer@signatureinfo.com>
 
 	* src/main/perl/lib/BLM/Benchmark.pm: SYNOPSIS
